# pysusie

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: __init__.py  benchmark_vs_r.py  phya_window_sweep.py
benchmarks/results/: phya_pysusie_vs_susier_cs_markers_20260228_210258.csv  phya_pysusie_vs_susier_cs_overlap_20260228_210258.csv  phya_pysusie_vs_susier_runtime_repeats_20260228_210533.json  phya_pysusie_vs_susier_summary_20260228_210258.json  phya_pysusie_vs_susier_top_pips_20260228_210258.csv  phya_window_sweep_results.json  susieR_completed_runs_partial.csv
docs/: API.md
examples/: batch_finemapping.py  finemapping_from_vcf.py
finemapping_chr9/: README.md  bhat.npy  credible_sets.csv  finemapping_results.csv  locus_metadata.json  locus_summary_stats.csv  pip.npy  quick_validation_results.csv  run_finemapping.py  sensitivity_results.csv  shat.npy  snp_order.csv  z_scores.npy
pysusie/: __init__.py  _credible_sets.py  _elbo.py  _ibss.py  _mrash.py  _numba_kernels.py  _plotting.py  _preprocessing.py  _ser.py  _trendfilter.py  _types.py  _unmappable.py  _utils.py  datasets.py  susie.py
tests/: test_benchmarks.py  test_credible_sets.py  test_elbo.py  test_ibss.py  test_mrash.py  test_numerical.py  test_preprocessing.py  test_ser.py  test_summary_stats.py  test_susie.py  test_trendfilter.py  test_unmappable.py
