[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysusie"
version = "0.1.0"
description = "Python implementation of Sum of Single Effects (SuSiE) regression"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "pysusie" }]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
pandas = ["pandas>=1.5"]
numba = ["numba>=0.57"]
sklearn = ["scikit-learn>=1.1"]
r = ["rpy2>=3.5"]
dev = [
  "pytest>=7",
  "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pysusie*"]
